作品リンク

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               Ruby on
               Railsというフレームワークを使い、身の回りの課題を解決するようなアプリケーションを制作します。
             </p>
-            <a href="">
+            <a href="works.html#web-app">
               作品の例はこちら
               <img src="img/right.png" alt="右矢印" />
             </a>
@@ -123,7 +123,7 @@
             <p>
               軽快なアニメーションを取り入れたオリジナルのサイトやブログ、ポートフォリオなどを制作します。
             </p>
-            <a href="">
+            <a href="works.html#web-site">
               作品の例はこちら
               <img src="img/right.png" alt="右矢印" />
             </a>
