作品リンク先設定

--- a/works.html
+++ b/works.html
@@ -81,7 +81,7 @@
         <h1>Works</h1>
         <p>過去の制作事例を紹介します</p>
       </div>
-      <section class="works-wrapper">
+      <section class="works-wrapper" id="web-app">
         <h2>webアプリ</h2>
         <div class="works-content">
           <div class="wc-img">
@@ -111,7 +111,7 @@
         </div>
       </section>
 
-      <section class="works-wrapper">
+      <section class="works-wrapper" id="web-site">
         <h2>webサイト</h2>
         <div class="works-content wc-pc">
           <div class="wc-img">
