--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </li>
         <li>
           <img src="img/face4.jpg" />
-          <p class="member-list-role">卓長</p>
+          <p class="member-list-role">補佐</p>
           <p class="member-list-name">4M かまぼこ</p>
         </li>
       </ul>
