--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <p>scroll</p>
       </div>
     </section>
-    <section class="catch-copy">
+    <div class="catch-copy">
       <p class="catch-copy-title">“Hello World”</p>
       <p class="catch-copy-text">
         私たちco:Deは「楽しくコードを書く」というコンセプトで、WebサイトやWebアプリを制作する卓です。
       </p>
-    </section>
+    </div>
     <section class="what">
       <div class="what-heading">
         <h2>What we do</h2>
