アウトライン修正

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <!-- ここまで -->
     </header>
-    <section class="main-visual">
+    <div class="main-visual">
       <h1 class="main-visual-title">
         <span>コーディングを</span><br />
         <span>もっと楽しく</span>
@@ -85,7 +85,7 @@
         <img src="img/scroll.png" alt="scroll-Icon" />
         <p>scroll</p>
       </div>
-    </section>
+    </div>
     <div class="catch-copy">
       <p class="catch-copy-title">“Hello World”</p>
       <p class="catch-copy-text">
